# git-changelog-ai

./: .env.example  .gitignore  README.md  README_CN.md  pyproject.toml
src/git_changelog_ai/: __init__.py  __main__.py  cli.py  config.py  constants.py  core.py  git.py  notify.py  types.py
src/git_changelog_ai/ai/: __init__.py  base.py  prompts.py
